<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/profile"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtServicingCharts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_build_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/servicing_charts"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtQRCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_center_focus_weak_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/qr_code"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtChangePwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/change_password"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtChat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_chat_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/chat"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtPrivacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_people_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/privacy"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtTerms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_people_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/terms"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtAboutUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_people_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/about_us"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtContactUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/contact_us"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_thumb_up_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/rating"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtFAQ"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_question_answer_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/faq"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="40dp"
                        android:background="@color/md_grey_400" />

                    <com.otgs.customerapp.utils.TextViewDrawableSize
                        android:id="@+id/txtLogout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/logout"
                        android:textColor="@color/md_black"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>